--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -86,21 +86,9 @@ The layering model differs between the "light" and "dark" themes.
 ![Layering model](images/color-layering-model-1.png)
 
 </Column>
-</Row>
+</Row>                                                                                       |     |
 
-## Implementing color
-
-Carbon uses tokens and themes to manage color. Tokens are role-based, and themes
-specify the color values that serve those roles in the UI.
-
-| Term    | Definition                                                                                                                                                                                  |     |
-| ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
-| _Theme_ | A collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
-| _Token_ | The role-based identifier that assigns a color. Used instead of a hex code. Tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.              |     |
-| _Role_  | The systematic usage(s) of a color. Roles cannot be changed between themes.                                                                                                                 |     |
-| _Value_ | The unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |     |
-
-### Themes
+## Themes
 
 Themes serve as an organizational framework for color in Carbon, with each theme
 based on a specific primary background color. And they actually get their names
@@ -167,7 +155,7 @@ layering model.
 
 <br />
 
-#### Light themes
+### Light themes
 
 There are two light themes: White and Gray 10.
 
@@ -224,7 +212,7 @@ gray colors stack on top of each other in a UI when using the Carbon themes.
 The layering model differs between the "light" and "dark" themes. In the light
 themes, layers alternate between White and Gray 10.
 
-#### Dark themes
+### Dark themes
 
 There are two dark themes: Gray 90 and Gray 100.
 
@@ -278,7 +266,7 @@ All of the themes are available in
 
 <br />
 
-#### High contrast
+### High contrast
 
 In some cases, it is helpful to apply light components to dark backgrounds or
 dark components to light backgrounds. This technique is useful to focus
@@ -296,6 +284,18 @@ attention or create visual tension.
 
   </DoDont>
 </DoDontRow>
+
+## Implementing color
+
+Carbon uses tokens and themes to manage color. Tokens are role-based, and themes
+specify the color values that serve those roles in the UI.
+
+| Term    | Definition                                                                                                                                                                                  |     |
+| ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --- |
+| _Theme_ | A collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
+| _Token_ | The role-based identifier that assigns a color. Used instead of a hex code. Tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.              |     |
+| _Role_  | The systematic usage(s) of a color. Roles cannot be changed between themes.                                                                                                                 |     |
+| _Value_ | The unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |
 
 ### Tokens
 
@@ -355,7 +355,7 @@ The color layering model for interaction tokens is as follows:
 </Column>
 </Row>
 
-#### Hover
+### Hover
 
 Hover is a subtle visual change that appears when a mouse cursor moves over an
 interactive element. Hover states have their own tokens and are identified the
@@ -388,7 +388,7 @@ overflow menu items use `$text-secondary` and `$layer` in its enabled state. On
 hover, the text switches to `$text-primary` and the background to
 `$layer-hover`.
 
-#### Active
+### Active
 
 The active state can be used to indicate a `click`, `tap` or down press of a
 button. Active tokens are identified by `-active` added to the end of the base
@@ -411,7 +411,7 @@ value, and Black value shares the same active state as Gray 100 value.
 </Column>
 </Row>
 
-#### Selected
+### Selected
 
 Selected states indicated item(s) or option(s) that have been chosen in the UI
 by the user through any input method. Selected token are identified by the
@@ -434,7 +434,7 @@ shares the same selected state as Gray 100.
 </Column>
 </Row>
 
-#### Focus
+### Focus
 
 The focus state draws attention to the active element on a page when using the
 keyboard or voice to navigate. In Carbon, the focus of an element is most
@@ -452,7 +452,7 @@ Focus states are required on all interactive elements and must pass 3:1 color
 contrast accessibility. Often times to achieve proper 3:1 contrast a
 `$focus-inset` border is used between the focus border and the element itself.
 
-#### Disabled
+### Disabled
 
 A disabled state is applied to a component when the user is not allowed to
 interact with the component due to either permissions, dependencies, or
